--- a/9920254pmindex.html
+++ b/9920254pmindex.html
@@ -182,6 +182,13 @@
     <div class="container">
         <h1>Zoning Lookup Tool</h1>
         <p class="subtitle">Find zoning permissions for land uses quickly and easily</p>
+        <div style="background: #fff3cd; border: 1px solid #ffeaa7; border-radius: 8px; padding: 15px; margin-bottom: 30px; border-left: 5px solid #fdcb6e;">
+            <strong>⚠️ Important Disclaimer:</strong> This tool provides general zoning information for reference purposes only. Always verify requirements with the Planning Department before making final development decisions. Zoning regulations may have additional requirements, recent updates, or site-specific considerations not reflected in this tool.
+            <br><br>
+            <strong>📋 Additional Resources:</strong>
+            <a href="https://cityofpetaluma.org/zoning-map/" target="_blank" style="color: #2980b9; text-decoration: none;">View Official Zoning Map</a> | 
+            <a href="https://petaluma.municipal.codes/SmartCode/2" target="_blank" style="color: #2980b9; text-decoration: none;">View Complete Municipal Code</a>
+        </div>
 
         <div class="query-section">
             <div class="query-title">Where can I put a specific use?</div>
@@ -194,7 +201,9 @@
                 <button onclick="searchByLandUse()">Find Zones</button>
             </div>
         </div>
-
+<div style="text-align: center; font-size: 1.2em; color: #7f8c8d; margin: 20px 0;">
+    — OR —
+</div>
         <div class="query-section">
             <div class="query-title">What's allowed in a specific zone?</div>
             <div class="query-form">
