--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <br><br>
             <strong>📋 Additional Resources:</strong>
             <a href="https://cityofpetaluma.org/zoning-map/" target="_blank" style="color: #2980b9; text-decoration: none;">View Official Zoning Map</a> | 
-            <a href="https://petaluma.municipal.codes/SmartCode/2" target="_blank" style="color: #2980b9; text-decoration: none;">View Complete Municipal Code</a>
+            <a href="https://petaluma.municipal.codes/SmartCode/2" target="_blank" style="color: #2980b9; text-decoration: none;">View Smart Code and Zoning Code</a>
         </div>
 
         <div class="query-section">
