--- a/index.html
+++ b/index.html
@@ -215,7 +215,10 @@
                 <button onclick="searchByZone()">Show Uses</button>
             </div>
         </div>
-
+<div style="background: #e8f4fd; border: 1px solid #b3d9ff; border-radius: 8px; padding: 15px; margin-bottom: 30px; border-left: 5px solid #2980b9;">
+    <strong>Special Districts:</strong> Properties in combining/overlay districts or PUD/PCD zones may have additional requirements. 
+    <a href="https://cityofpetaluma.org/pud-and-pcd-guidelines/" target="_blank" style="color: #2980b9; text-decoration: none;">Check specific plan guidelines</a>
+</div>
         <div class="results" id="results">
             <p class="loading">Select a query above to get started</p>
         </div>
