--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
         </div>
 <div style="background: #e8f4fd; border: 1px solid #b3d9ff; border-radius: 8px; padding: 15px; margin-bottom: 30px; border-left: 5px solid #2980b9;">
-    <strong>Special Districts:</strong> Properties in combining/overlay districts or PUD/PCD zones may have additional requirements. 
+    <strong>Special Districts:</strong> Properties in PUD/PCD zones may have additional requirements. 
     <a href="https://cityofpetaluma.org/pud-and-pcd-guidelines/" target="_blank" style="color: #2980b9; text-decoration: none;">Check specific plan guidelines</a>
 </div>
         <div class="results" id="results">
