--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
                 <button onclick="searchByLandUse()">Find Zones</button>
             </div>
         </div>
+<div style="background: #f8f9fa; border: 1px solid #dee2e6; border-radius: 6px; padding: 10px; margin-top: 15px; font-size: 0.9em; color: #6c757d;">
+    Need help understanding a land use? <a href="https://petaluma.municipal.codes/ZoningOrds/28" target="_blank" style="color: #2980b9; text-decoration: none;">Find land use definitions here</a>
+</div>
 <div style="text-align: center; font-size: 1.2em; color: #7f8c8d; margin: 20px 0;">
     — OR —
 </div>
