--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoning Permit Decision Tool</title>
+    <title>Permitting Pathway Tool</title>
     <style>
         * {
             box-sizing: border-box;
@@ -756,7 +756,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🏛️ Zoning Permit Decision Tool</h1>
+            <h1>🏛️ Permitting Pathway</h1>
             <p>Interactive guide to determine required permits and review processes</p>
         </div>
         
