--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,11 @@
                         options: [
                             { text: 'Minor modification to existing CUP', value: 'minor_cup', next: 'minor_cup' },
                             { text: 'Less intensive use than previous occupant', value: 'minor_cup', next: 'minor_cup' },
-                            { text: 'Dwelling groups, tasting rooms, or other minor CUP types', value: 'minor_cup', next: 'minor_cup' },
+                            { text: 'Dwelling group (multiple detached units)', value: 'minor_cup', next: 'minor_cup' },
+                            { text: 'Tasting room', value: 'minor_cup', next: 'minor_cup' },
+                            { text: 'Single-family home in commercial zone', value: 'minor_cup', next: 'minor_cup' },
+                            { text: 'Minor telecommunications facility', value: 'minor_cup', next: 'minor_cup' },
+                            { text: 'Recently expired CUP (within 24 months)', value: 'minor_cup', next: 'minor_cup' },
                             { text: 'Standard conditional use', value: 'standard_cup', next: 'standard_cup' }
                         ]
                     },
