--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="margin-top: 60px;">
         <div class="header">
             <h1>🏛️ Permitting Pathway</h1>
             <p>Interactive guide to determine required permits and review processes</p>
