--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             }
         }
     </style>
+<script src="ZoningData_not_permitted.js"></script>
 </head>
 <body>
     <div class="container">
