--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
             color: #555;
             font-size: 0.95em;
         }
+.results h4 {
+  display: inline-block;
+  padding: 4px 8px;
+  border-radius: 6px;
+  font-weight: 600;
+}
+.results h4:nth-of-type(1) { background: #eaf7ee; color: #1e7e34; }    /* Permitted */
+.results h4:nth-of-type(2) { background: #fff3e0; color: #b05600; }    /* Conditional */
+.results h4:nth-of-type(3) { background: #f3e9fb; color: #6f42c1; }    /* Accessory */
 
         .loading {
             text-align: center;
